refactor: compress bg img size

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,7 +30,7 @@ body {
     content: "";
     width: 100%;
     height: 100vh;
-    background-image: url("../public/bg_4.jpg");
+    background-image: url("../public/bg_4-min.jpg");
     position: fixed;
     left: 0;
     top: 0;
