--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,12 +4,15 @@
   h1 {
     @apply text-2xl;
   }
+
   h2 {
     @apply text-xl;
   }
+
   h3 {
     @apply text-lg;
   }
+
   // a {
   //   @apply text-blue-600 underline;
   // }
@@ -26,8 +29,9 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  &:before{
-    content:'';
+
+  &:before {
+    content: '';
     content: "";
     width: 100%;
     height: 100vh;
@@ -42,36 +46,43 @@ body {
   }
 }
 
-.text-shadow{
+.text-shadow {
   text-shadow: 0px 2px 0px rgb(0 0 0 / 30%);
 }
 
-.adjacent-post{
-  & .arrow-btn{
+.adjacent-post {
+  & .arrow-btn {
     transition: width 300ms ease;
     width: 50px;
   }
-  &:hover{
-    & .arrow-btn{
+
+  &:hover {
+    & .arrow-btn {
       width: 60px;
     }
   }
 }
 
 .react-multi-carousel-list {
-  & .arrow-btn{
+  & .arrow-btn {
     transition: width 300ms ease;
     width: 50px;
-    &:hover{
+
+    &:hover {
       width: 60px;
     }
   }
-  
+
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+blockquote {
+  border-left: 0.3rem solid;
+  padding-left: 0.6rem;
 }
 
 * {
