--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,14 +3,17 @@
 @layer base {
   h1 {
     @apply text-2xl;
+    @apply font-bold;
   }
 
   h2 {
     @apply text-xl;
+    @apply font-bold;
   }
 
   h3 {
     @apply text-lg;
+    @apply font-bold;
   }
 
   // a {
