--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,7 +13,9 @@
     @apply text-lg font-bold;
   }
 
-  menu, ol, ul {
+  menu,
+  ol,
+  ul {
     @apply list-decimal p-0 ml-5;
   }
 
@@ -29,7 +31,8 @@ body {
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  line-height: 1.625;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
   &:before {
     content: '';
